--- a/css/styles.css
+++ b/css/styles.css
@@ -255,7 +255,7 @@ img {
 .works-txt{
     font-weight: 700;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14;
     text-align: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
@@ -588,6 +588,7 @@ color: var(--primary-white-colour);
 /* Buttons */
 
     .button {
+    margin: 30px auto 0 auto;
     font-family: inherit;
 
     cursor: pointer;
@@ -640,15 +641,12 @@ color: var(--primary-white-colour);
 
     .button.order {
 
-        margin: 30px auto 0 auto;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
 
     width: 200px;
     height: 50px;
-    left: 700px;
-    top: 430px;
 
     border-radius: 4px;
 
@@ -680,6 +678,8 @@ color: var(--primary-white-colour);
 .footer-flex{
     display: flex;
     align-items: baseline;
+    
+    letter-spacing: normal;
 }
 
 .footer .logo {
@@ -690,7 +690,7 @@ color: var(--primary-white-colour);
 
 .address {
     margin-top: 20px;
-    margin-right: 70px;
+    /* margin-right: 70px; */
 }
 
 .footer-item:not(:last-child) {
@@ -735,15 +735,84 @@ color: var(--primary-white-colour);
     
 
     flex-direction: column;
+
+    margin-left: 70px;
 }
 
 .footer-strong {
-    color: var(--primary-white-colour);
-    text-transform: uppercase;
-
     margin-right: 20px;
     margin-bottom: 20px; 
+
+    line-height: 1.14;
+    text-transform: uppercase;
+
+    color: var(--primary-white-colour);
 }
+
+
+
+
+
+
+/* Form in footer */
+.subscribe-title{
+    margin: 0;
+}
+
+.subscribe{
+    width: 570px;
+    height: 86px;
+    margin-left: 93px;
+}
+
+.subscribe-form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin-top: 20px;
+}
+
+
+.subscribe-email{
+    padding: 15px 16px;
+    width: 358px;
+    height: 50px;
+
+    color: var(--primary-white-colour);
+    background-color: #2F303A;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+}
+
+.subscribe-email:focus{
+    border-color: var(--accent-colour);
+}
+
+.subscribe-email::placeholder{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.subscribe-btn{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+
+    margin-top: 0px;
+    margin-left: 12px;
+}
+
+
+.subscribe-icon{
+    margin-left: 10px;
+}
+
+
+
 
 
 
@@ -770,7 +839,6 @@ color: var(--primary-white-colour);
     color: var(--primary-white-colour);
     background-color: var(--accent-colour);
 }
-
 
 
 
@@ -805,7 +873,7 @@ color: var(--primary-white-colour);
 .modal{
     position: absolute;
     max-width: 528px;
-    max-height: 581px;
+    /* max-height: 581px; */
 
     padding: 40px;
     top: 50%;
@@ -826,19 +894,25 @@ color: var(--primary-white-colour);
     align-items: center;
     justify-content: center;
 
-    border: none;
-    background-color: transparent;
+    width: 30px;
+    height: 30px;
+
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
 
     cursor: pointer;
 }
 
-.modal-close-btn{
-    width: 30px;
-    height: 30px;
-    background: #FFFFFF;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
+
+.modal-close-btn:hover .modal-close-icon, 
+.modal-close-btn:focus .modal-close-icon{
+    fill: var(--accent-colour);
 }
+
+
+
+
 
 /* Form */
 
@@ -849,13 +923,14 @@ color: var(--primary-white-colour);
 
     font-weight: 700;
     font-size: 20px;
-    line-height: 23px;
-    text-align: center;
+    line-height: 1.15;
 
     color: var(--title-text-colour);
 }
 
-/* .modal-form{} */
+.modal-form{
+    color: var(--primary-text-colour);
+}
 
 
 .modal-label {
@@ -874,8 +949,14 @@ color: var(--primary-white-colour);
     margin-top: 4px;
     padding: 11px;
     padding-left: 42px;
-}
 
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+
+    color: #212121;
+
+    outline: transparent;
+}
 
 .modal-icon{
     position: absolute;
@@ -883,17 +964,85 @@ color: var(--primary-white-colour);
     left: 12px;
 }
 
+.modal-input:focus + .modal-icon{
+    fill: var(--accent-colour);
+}
+
+.modal-input:focus{
+    border-color: var(--accent-colour);
+}
+
+.modal-textarea{
+    width: 100%;
+    height: 120px;
+    resize: none;
+
+    padding: 12px 16px;
+    margin-top: 4px;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+
+    outline: transparent;
+}
+
+.modal-textarea:focus{
+    border-color: var(--accent-colour);
+}
+
+.modal-textarea::placeholder{
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+
+    color: rgba(117, 117, 117, 0.5);
+}
 
 
-/* .modal-btn{
-    margin-top: 30px;
-    mr and ml 164px
-    margin-bottom: 43px;
-} */
+.modal-agreement{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin-bottom: 30px;
+}
+
+
+.modal-checkbox{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin-right: 7px;
+
+    width: 16px;
+    height: 15px;
+
+    outline: 2px solid var(--title-text-colour);
+    outline-offset: -2px;
+    border-radius: 2px;
+}
+
+.checkbox:checked + .modal-checkbox{
+    outline-color: var(--accent-colour);
+    background-color: var(--accent-colour);
+}
+
+.modal-agreement-link{
+    color: var(--accent-colour);
+}
+
+.modal-agreement-txt{
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+
+    color: var(--primary-text-colour);
+}
+
+.modal-btn{
+    display: block;
+}
 
 
 
-
-
-/* .modal-text-area{} */
 
