--- a/css/styles.css
+++ b/css/styles.css
@@ -678,7 +678,7 @@ color: var(--primary-white-colour);
 .footer-flex{
     display: flex;
     align-items: baseline;
-    
+
     letter-spacing: normal;
 }
 
@@ -872,8 +872,7 @@ color: var(--primary-white-colour);
 
 .modal{
     position: absolute;
-    max-width: 528px;
-    /* max-height: 581px; */
+    width: 528px;
 
     padding: 40px;
     top: 50%;
@@ -902,11 +901,12 @@ color: var(--primary-white-colour);
     border-radius: 50%;
 
     cursor: pointer;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
-.modal-close-btn:hover .modal-close-icon, 
-.modal-close-btn:focus .modal-close-icon{
+.modal-close-btn:hover, 
+.modal-close-btn:focus{
     fill: var(--accent-colour);
 }
 
@@ -1005,6 +1005,11 @@ color: var(--primary-white-colour);
 
     margin-bottom: 30px;
 }
+.modal-agreement-label{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 
 .modal-checkbox{
@@ -1022,9 +1027,15 @@ color: var(--primary-white-colour);
     border-radius: 2px;
 }
 
+
 .checkbox:checked + .modal-checkbox{
     outline-color: var(--accent-colour);
     background-color: var(--accent-colour);
+}
+
+.modal-checkbox:focus{
+    outline-color: var(--accent-colour);
+    background-color: var(--primary-white-colour);
 }
 
 .modal-agreement-link{
